--- a/SimpleUdpServer/mainwindow.ui
+++ b/SimpleUdpServer/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>367</width>
-    <height>320</height>
+    <height>353</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -33,7 +33,7 @@
        <item>
         <widget class="QLabel" name="label_2">
          <property name="text">
-          <string>File Name</string>
+          <string>File Name: </string>
          </property>
         </widget>
        </item>
@@ -70,7 +70,7 @@
           <item>
            <widget class="QLabel" name="label_3">
             <property name="text">
-             <string>Port Number:</string>
+             <string>Port: </string>
             </property>
            </widget>
           </item>
@@ -113,11 +113,7 @@
            </widget>
           </item>
           <item>
-           <widget class="QLabel" name="ipNumber">
-            <property name="text">
-             <string>IP Number</string>
-            </property>
-           </widget>
+           <widget class="QListWidget" name="ipList"/>
           </item>
          </layout>
         </widget>
@@ -241,7 +237,7 @@
      <x>0</x>
      <y>0</y>
      <width>367</width>
-     <height>20</height>
+     <height>22</height>
     </rect>
    </property>
   </widget>
