--- a/SimpleUdpServer/mainwindow.ui
+++ b/SimpleUdpServer/mainwindow.ui
@@ -226,6 +226,13 @@
          </property>
         </spacer>
        </item>
+       <item>
+        <widget class="QRadioButton" name="testBox">
+         <property name="text">
+          <string>1 Second Test</string>
+         </property>
+        </widget>
+       </item>
       </layout>
      </widget>
     </item>
