--- a/SimpleUdpServer/mainwindow.ui
+++ b/SimpleUdpServer/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>367</width>
-    <height>353</height>
+    <height>460</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -39,6 +39,13 @@
        </item>
        <item>
         <widget class="QPlainTextEdit" name="fileNameInput"/>
+       </item>
+       <item>
+        <widget class="QPushButton" name="pushButton">
+         <property name="text">
+          <string>Choose Dir</string>
+         </property>
+        </widget>
        </item>
       </layout>
      </widget>
@@ -229,7 +236,7 @@
        <item>
         <widget class="QCheckBox" name="checkBox">
          <property name="text">
-          <string>Test x seconds</string>
+          <string>1 second</string>
          </property>
         </widget>
        </item>
@@ -244,6 +251,23 @@
         </widget>
        </item>
       </layout>
+     </widget>
+    </item>
+    <item>
+     <widget class="QListWidget" name="listWidget">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>100</height>
+       </size>
+      </property>
+     </widget>
+    </item>
+    <item>
+     <widget class="QPushButton" name="button_file_path">
+      <property name="text">
+       <string>Open File Path</string>
+      </property>
      </widget>
     </item>
    </layout>
